2007-06-14  Vincent Untz  <vuntz@gnome.org>

	Use new glib API where it makes sense.

	* applet.c: (panel_applet_save_position): use g_timeout_add_seconds()
	* menu.c: (add_app_to_desktop): use g_get_user_special_dir() to know
	where's the desktop
	* panel-ditem-editor.c: (panel_ditem_editor_changed),
	(panel_ditem_editor_revert): use g_timeout_add_seconds()
	* panel-menu-items.c: (activate_uri): small update
	(activate_desktop_uri): new,  use g_get_user_special_dir() to know
	where's the desktop
	(panel_place_menu_item_create_menu): use activate_desktop_uri() for
	the desktop menu item

==================== 2.19.3 ====================

2007-05-26  Vincent Untz  <vuntz@gnome.org>

	* panel-properties-dialog.c:
	(panel_properties_dialog_update_for_attached): change title of the
	dialog to Drawer Properties if the toplevel is a drawer.
	Fix bug #319284

2007-05-26  Vincent Untz  <vuntz@gnome.org>

	* panel-icon-names.h: add new icon
	* panel-menu-items.c: (panel_place_menu_item_append_volumes): use an
	icon for removable media menu item
	Fix FIXME and bug #343180

2007-05-26  Vincent Untz  <vuntz@gnome.org>

	* panel-ditem-editor.c: (panel_ditem_editor_name_changed),
	(panel_ditem_editor_comment_changed),
	(panel_ditem_editor_icon_changed), (panel_ditem_editor_revert): use
	panel_util_key_file_remove_all_locale_key()
	* panel-util.[ch]: (panel_util_key_file_remove_all_locale_key): new,
	to remove all localized and non-locale versions of a key.
	Fix bug #363818

2007-05-26  Vincent Untz  <vuntz@gnome.org>

	* panel-properties-dialog.c:
	(panel_properties_dialog_image_changed): ignore the first
	selection-changed signals, since they're bogus (GTK+ bug #327243)
	(panel_properties_dialog_setup_image_chooser): initialize helper.
	Fix bug #412479

2007-05-26  Vincent Untz  <vuntz@gnome.org>

	* panel-applet-frame.c: (panel_applet_frame_set_flags_from_any):
	update the background if a handle was added. Fix initial background
	not working for handles.
	Fix bug #343168
